policies/opa/gatekeeper/constraint-templates/1-labels-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
        listKind: K8sRequiredLabelsList
        plural: k8srequiredlabels
        singular: k8srequiredlabels
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            allowedOps:
              type: array
              items:
                type: string
            labels:
              type: array
              items:
                type: string
            specTemplateLabels:
              type: array
              items:
                type: string
            errMsg:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      libs: 
        - |
          package lib.k8s.helpers

          allowed_operations = value {
            value := {"CREATE", "UPDATE"}
          }

          review_operation = value {
            value := input.review.operation
          }

          review_metadata_labels = value {
            value := input.review.object.metadata.labels
          }

          review_spec_template_metadata_labels = value {
            value := input.review.object.spec.template.metadata.labels
          }

          deployment_error = value {
            value := "DEPLOYMENT_INVALID"
          }

          deployment_containers = value {
            value := input.review.object.spec.template.spec.containers
          }

          deployment_role = value {
            value := input.review.object.spec.template.metadata.annotations["iam.amazonaws.com/role"]
          }

          review_id = value {
            value := sprintf("%v/%v/%v", [
              review_namespace,
              review_name,
              review_kind
            ])
          }

          review_name = value {
            value := input.review.object.metadata.name
          }

          else = value {
            value := "NOT_FOUND"
          }

          review_namespace = value {
            value := input.review.object.metadata.namespace
          }

          else = value {
            value := "NOT_FOUND"
          }

          review_kind = value {
            value := input.review.kind.kind
          }

          else = value {
            value := "NOT_FOUND"
          }
      rego: |
        package k8srequiredlabels

        import data.lib.k8s.helpers as helpers

        violation[{"msg": msg, "details": {"missing_labels": missing}}] {
          helpers.review_operation = input.parameters.allowedOps[_]
          provided := {label | helpers.review_metadata_labels[label]}
          required := {label | label := input.parameters.labels[_]}
          missing := required - provided
          count(missing) > 0
          msg := sprintf("%v: Resource missing %v metadata label(s). Required labels: %v. Resource ID (ns/name/kind): %v", [input.parameters.errMsg,concat(", ",missing),concat(", ",required),helpers.review_id])
        }

        violation[{"msg": msg, "details": {"missing_labels": missing}}] {
          helpers.review_operation = input.parameters.allowedOps[_]
          provided := {label | helpers.review_spec_template_metadata_labels[label]}
          required := {label | label := input.parameters.specTemplateLabels[_]}
          missing := required - provided
          count(missing) > 0
          msg := sprintf("%v: Resource missing %v spec.template.metadata label(s). Required labels: %v. Resource ID (ns/name/kind): %v", [input.parameters.errMsg,concat(", ",missing),concat(", ",required),helpers.review_id])
        }
